# mailboxer-python

./: .gitignore  .pylintrc  .travis.yml  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
mailboxer/: __init__.py  __version__.py  mailboxer.py  query.py
tests/: conftest.py  flask_app.py  test_mailboxer.py
