[metadata]
name = flux
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
summary = Python client for the Mailboxer service
description-file =
    README.md
description-content-type = text/markdown
license = BSD3
author = Rotem Yaari
author_email = vmalloc@gmail.com
url = https://github.com/vmalloc/mailboxer-python


[extras]
testing =
        pytest
