[metadata]
name = mailboxer-python
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
summary = Client library for Mailboxer
description-file =
    README.md
description-content-type = text/markdown
license = BSD
author = Rotem Yaari
author_email = vmalloc@gmail.com
url = https://github.com/getslash/mailboxer-python


[extras]
testing =
    pylint
    flask-loopback
    pytest
